rahti-openshift.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: sentiment-backend
spec:
  replicas: 1
  selector:
    app: sentiment-backend
  template:
    metadata:
      labels:
        app: sentiment-backend
    spec:
      containers:
        - name: sentiment-backend
          image: image-registry.openshift-image-registry.svc:5000/$(NAMESPACE)/sentiment-backend:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: sentiment-backend
spec:
  selector:
    app: sentiment-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sentiment-backend
spec:
  to:
    kind: Service
    name: sentiment-backend
  tls:
    termination: edge
